# epsilon

./: epsilon.cabal
.github/workflows/: haskell-ci.yml
src/Numeric/: Epsilon.hs
