cabal-version: 2.2
name:          epsilon
version:       1
synopsis:      Epsilon type-class
category:      Math, Algebra
description:
  Testing for values "near" zero.

license:       BSD-3-Clause
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
homepage:      http://github.com/phadej/epsilon/
bug-reports:   http://github.com/phadej/epsilon/issues
copyright:     Copyright (C) 2012-2015 Edward A. Kmett
build-type:    Simple
tested-with:
  GHC ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.1

source-repository head
  type:     git
  location: https://github.com/phadej/epsilon

library
  build-depends:    base >=4.5 && <4.16
  exposed-modules:  Numeric.Epsilon
  ghc-options:      -Wall -fwarn-tabs -fdicts-cheap -funbox-strict-fields
  hs-source-dirs:   src

  if impl(ghc >=7.10)
    ghc-options: -fno-warn-trustworthy-safe

  if impl(ghc >=8.6)
    ghc-options: -Wno-star-is-type

  default-language: Haskell2010
